# strata-python

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
idl/v1/: STRATA_CORE_REV  agents-guide.md  errors.json  missing-examples.yaml
idl/v1/examples/: admin.config.yaml  admin.config_key.yaml  admin.describe.yaml  admin.health.yaml  admin.info.yaml  admin.metrics.yaml  admin.ping.yaml  admin.remote.yaml  arrow.export.yaml  arrow.import.yaml  branch.create.yaml  branch.delete.yaml  branch.fork.yaml  branch.fork_at_timestamp.yaml  branch.fork_at_version.yaml  branch.get.yaml  branch.list.yaml  event.append.yaml  event.batch_append.yaml  event.count.yaml  event.exists.yaml  event.get.yaml  event.list.yaml  event.range.yaml  event.range_time.yaml  event.types.yaml  event.verify_chain.yaml  graph.analytics.bfs.yaml  graph.analytics.cdlp.yaml  graph.analytics.lcc.yaml  graph.analytics.pagerank.yaml  graph.analytics.sssp.yaml  graph.analytics.wcc.yaml  graph.apply_delete_policy.yaml  graph.batch_write.yaml  graph.bindings.yaml  graph.bulk_insert.yaml  graph.create.yaml  graph.delete.yaml  graph.edge.add.yaml  (+77 more)
idl/v1/schemas/: admin.config.json  admin.config_key.json  admin.describe.json  admin.health.json  admin.hub_clone.json  admin.info.json  admin.metrics.json  admin.ping.json  admin.remote.json  arrow.export.json  arrow.import.json  branch.create.json  branch.delete.json  branch.fork.json  branch.fork_at_timestamp.json  branch.fork_at_version.json  branch.get.json  branch.list.json  event.append.json  event.batch_append.json  event.count.json  event.exists.json  event.get.json  event.list.json  event.range.json  event.range_time.json  event.types.json  event.verify_chain.json  graph.analytics.bfs.json  graph.analytics.cdlp.json  graph.analytics.lcc.json  graph.analytics.pagerank.json  graph.analytics.sssp.json  graph.analytics.wcc.json  graph.apply_delete_policy.json  graph.batch_write.json  graph.bindings.json  graph.bulk_insert.json  graph.create.json  graph.delete.json  (+86 more)
python/stratadb/: __init__.py  _core.py  _demo.py  _results.py  _scaffold.py  _stratadb.pyi  _wire.py  demo.py  errors.py  filters.py  init.py
python/stratadb/_data/: agent-guide.md  command-index.json  skill.md
python/stratadb/_generated/: __init__.py  catalog.py  commands.py  models.py
python/stratadb/namespaces/: __init__.py  admin.py  ai.py  arrow.py  base.py  branches.py  events.py  graphs.py  json.py  kv.py  spaces.py  vectors.py
src/: lib.rs
tests/: test_agent_guide.py  test_ai.py  test_arrow.py  test_concurrency.py  test_demo.py  test_doctests.py  test_durable.py  test_errors.py  test_examples_sync.py  test_foundation.py  test_generated.py  test_graph_analytics_ontology.py  test_graph_bindings.py  test_graph_branch_space.py  test_hub_clone.py  test_inference_local.py  test_init.py  test_kv_json.py  test_packaging.py  test_pagination.py  test_vectors_events.py
tools/: generate.py  generate_examples.py  release_prep.py
