[package]
name = "stratadb-python"
version = "1.0.0"
edition = "2021"
description = "Python bindings for Strata (embedded multi-model database)"
license = "MIT"
repository = "https://github.com/stratalab/strata-python"

[lib]
name = "_stratadb"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
serde_json = "1"

# The native binding links the V1 executor's serialized command boundary in
# process — the same wire the CLI, MCP server, and wasm bindings speak. No
# `hub` (network/tokio) and no `inference` (model runtime): the V1 Python SDK
# is data-plane only, keeping the wheel lean and toolchain-free to install.
#
# Local development uses a path dependency to the sibling strata-core checkout.
# The release build (P6) pins the published rev:
#   strata-executor = { git = "https://github.com/stratalab/strata-core", rev = "8fbd3e7e...", default-features = false, features = ["localfs", "arrow"] }
strata-executor = { path = "../strata-core/crates/executor", default-features = false, features = ["localfs", "arrow"] }
