[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "stratadb"
version = "1.0.0"
description = "Strata — an embedded multi-model database for AI agents (Python SDK)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["database", "embedded", "ai", "agents", "vector", "kv", "graph", "json"]
authors = [{ name = "Strata Lab" }]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://stratadb.org"
Repository = "https://github.com/stratalab/strata-python"
Documentation = "https://stratadb.org"

[tool.maturin]
python-source = "python"
module-name = "stratadb._stratadb"
features = ["pyo3/extension-module"]
# Ship the resolved IDL command index (IDL decision #5) inside the wheel.
include = ["python/stratadb/_data/*.json"]
